--- a/AspNetCoreSpa/AspNetCoreSpa.csproj
+++ b/AspNetCoreSpa/AspNetCoreSpa.csproj
@@ -270,4 +270,8 @@
     <ProjectReference Include="..\DAL\DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\dist\" />
+  </ItemGroup>
+
 </Project>
