--- a/AspNetCoreSpa/package.json
+++ b/AspNetCoreSpa/package.json
@@ -104,7 +104,7 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.3",
     "ng-router-loader": "2.1.0",
-    "ng2-page-scroll": "^4.0.0-beta.9",
+    "ng2-page-scroll": "4.0.0-beta.9",
     "ngc-webpack": "2.0.0",
     "ngrx-store-freeze": "0.1.9",
     "node-sass": "4.5.2",
