added file downloader class

--- a/.gitignore
+++ b/.gitignore
@@ -303,3 +303,11 @@ $RECYCLE.BIN/
 *.lnk
 /AspNetCoreSpa/logs/log-20170808.txt
 /AspNetCoreSpa/logs
+
+/AspNetCoreSpa/wwwroot/Images
+/AspNetCoreSpa/bin
+/AspNetCoreSpa/bin/Debug/netcoreapp1.1/
+/AspNetCoreSpa/.vs
+/AspNetCoreSpa/.vs/AspNetCoreSpa/v15/
+
+
