--- a/AspNetCoreSpa/appsettings.json
+++ b/AspNetCoreSpa/appsettings.json
@@ -2,7 +2,8 @@
   "Data": {
     "useSqLite": "false",
     "SqlLiteConnectionString": "Data Source=Eleks.db",
-    "SqlServerConnectionString": "server=(localdb)\\mssqllocaldb;database=Studio;integrated security=true;MultipleActiveResultSets=true;"
+    //"SqlServerConnectionString": "server=(localdb)\\mssqllocaldb;database=Studio;integrated security=true;MultipleActiveResultSets=true;",
+    "SqlServerConnectionString": "Server=tcp:tattoedyouth.database.windows.net,1433;Initial Catalog=TattoedYouthDB;Persist Security Info=False;User ID=tattoedyouth;Password=Aa12345!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -19,15 +20,15 @@
     "From": ""
   },
   "Email": {
-    "From": "",
+    "From": "Tattoed youth parlor",
     "Subject": "",
     "SmtpLogin": {
       "Username": "",
       "Password": ""
     },
     "SendGrid": {
-      "Username": "",
-      "Password": ""
+      "Username": "azure_480c07c0ea10222dc77bf7d382792db5@azure.com",
+      "Password": "Aa12345!"
     }
   },
   "Paypal": {
