--- a/AspNetCoreSpa/package.json
+++ b/AspNetCoreSpa/package.json
@@ -111,7 +111,7 @@
     "npm-run-all": "4.0.2",
     "optimize-js-plugin": "0.0.4",
     "parse5": "3.0.2",
-    "primeng": "^2.0.3",
+    "primeng": "4.2.0-rc.1",
     "protractor": "5.1.1",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
