--- a/AspNetCoreSpa/tsconfig.json
+++ b/AspNetCoreSpa/tsconfig.json
@@ -10,12 +10,12 @@
     "noEmit": true,
     "importHelpers": true,
     "noEmitHelpers": true,
-    "noUnusedLocals": true,
-    "strictNullChecks": true,
-    "noImplicitAny": true,
+    "noUnusedLocals": false,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false,
     "lib": [
       "dom",
       "es6"
