--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Serilog.Sinks.Seq" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
