--- a/AspNetCoreSpa/AspNetCoreSpa.csproj
+++ b/AspNetCoreSpa/AspNetCoreSpa.csproj
@@ -274,6 +274,7 @@
     <Folder Include="wwwroot\dist\" />
     <Folder Include="wwwroot\dist\" />
     <Folder Include="wwwroot\dist\" />
+    <Folder Include="wwwroot\dist\" />
   </ItemGroup>
 
 </Project>
