Changed connection string in db.

--- a/AspNetCoreSpa/appsettings.json
+++ b/AspNetCoreSpa/appsettings.json
@@ -3,7 +3,7 @@
     "useSqLite": "false",
     "SqlLiteConnectionString": "Data Source=Eleks.db",
     //"SqlServerConnectionString": "server=(localdb)\\mssqllocaldb;database=Studio;integrated security=true;MultipleActiveResultSets=true;",
-    "SqlServerConnectionString": "Server=tcp:tattoedyouth.database.windows.net,1433;Initial Catalog=TattoedYouthDB;Persist Security Info=False;User ID=tattoedyouth;Password=Aa12345!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "SqlServerConnectionString": "Server=tcp:tatooserver.database.windows.net,1433;Initial Catalog=Scretches;Persist Security Info=False;User ID=anastasiyapolianska;Password=Aa19031998;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "IncludeScopes": false,
